--- a/dc23.openctf/dc23.openCTF.writeup.37.Sanity_Check.md
+++ b/dc23.openctf/dc23.openCTF.writeup.37.Sanity_Check.md
@@ -13,3 +13,17 @@ Speaking of CTF...
 ```
 planet
 ```
+
+## 日本語(Japanese)
+
+### 問題文
+Sanity Check 10 --- Hack the ______\! 
+
+### 訳文
+動作チェック 10 --- _____をハックしろ！
+
+### write-up
+CTFといえば、何故かこの言葉（映画「ハッカーズ」のセリフからですかね）
+```
+planet
+```
